log/2022-03-24T15:46:45+08:00.log
[33m[01m[05m[ You are changing the branch: lab1-1-Extra ][0m
Autotest: Begin at Thu Mar 24 15:46:45 CST 2022
[32m[ readelf.c found ][0m
rm -rf *.o
rm readelf
rm: cannot remove 'readelf': No such file or directory
make: *** [Makefile:16: clean] Error 1
gcc -I./ -c main.c
gcc -I./ -c readelf.c
readelf.c: In function 'readelf':
readelf.c:96:36: error: expected ')' before '{' token
   96 |      if((min_addr+min_mem>max_addr)
      |        ~                           ^
      |                                    )
   97 |      {
      |      ~                              
readelf.c:101:5: error: expected expression before '}' token
  101 |     }
      |     ^
readelf.c:113:41: error: 'max_addr' undeclared (first use in this function)
  113 |    printf("Overlay at page va : 0x%x\n",max_addr>>12<<12);
      |                                         ^~~~~~~~
readelf.c:113:41: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Makefile:6: readelf.o] Error 1
[31m[01m[ Cannot find your readelf. Please check your readelf.c. ][0m
[33m[01m[ You got 0 (of 100) this time. Thu Mar 24 15:46:48 CST 2022 ][0m
Autotest: End at Thu Mar 24 15:46:48 CST 2022
